--- a/app/pc/styles/_common.sass
+++ b/app/pc/styles/_common.sass
@@ -8,6 +8,12 @@ body
 body,html
   margin: 0
   padding: 0
+  width: 100%
+  height: 100%
+
+#container
+  width: 980px
+  margin: 0 auto
 
 ul,li,h1,h2,h3,h4,h5,h6,p,span
   list-style-type: none
