--- a/app/pc/layouts/index.jade
+++ b/app/pc/layouts/index.jade
@@ -1,7 +1,7 @@
 extends partials/_frame
 block main
-  h1 gulp-tmp
-  h2 images
+  //- h1 gulp-tmp
+  //- h2 images
   - var items = locals.pickup
   - var item = Object.keys(items)
   - var i = 1
