--- a/app/pc/layouts/index.jade
+++ b/app/pc/layouts/index.jade
@@ -1,8 +1,7 @@
 extends partials/_frame
 block main
-  //- h1 gulp-tmp
-  //- h2 images
-  - var items = locals.pickup
+
+  - var items = locals.hotoke.pickup
   - var item = Object.keys(items)
   - var i = 1
   while i <= 3
