--- a/app/pc/layouts/partials/_header.jade
+++ b/app/pc/layouts/partials/_header.jade
@@ -1,1 +1,12 @@
-header ヘッダー
+- var parents = Object.keys(locals.parent.parent)
+- var currentUrl = locals.root
+
+
+header
+  h3 ヘッダー
+  h3 #{currentUrl}
+  //- h3 #{relative}
+  a(href="#{root}") top
+  each index, n in parents
+    a(href="#{root}#{index}" style="margin-left:30px;") #{index}
+
