--- a/app/pc/layouts/detail-hasChild.jade
+++ b/app/pc/layouts/detail-hasChild.jade
@@ -1,7 +1,7 @@
 extends partials/_frame
 block main
   h1 GRANDSON HAS CHILD
-  - var currentUrl = locals.currentUrl
+  //- - var currentUrl = locals.currentUrl
   - var id         = locals.id
   - var root       = locals.root
   - var item       = locals.grandson.lists[id]
