--- a/app/pc/layouts/partials/_header.jade
+++ b/app/pc/layouts/partials/_header.jade
@@ -1,18 +1,20 @@
-- var parents = Object.keys(locals.parent.parent)
+- var parents = locals.parent.parent
 - var currentUrl = locals.currentUrl
 - var root = locals.root
 - var pankz = locals.pankz
 - var pankzName = locals.pankzName
 - var pankzLng = pankz.length
+//- - var parentName = pankzName[0]
 
 
 
 header
   p ヘッダー
-  p #{currentUrl}
+  //- p parentName = #{parentName}
+  p currentUrl = #{currentUrl}
   p root = #{root}
   a(href="#{root}") top
-  each index, n in parents
+  each index, n in Object.keys(parents)
     a(href="#{root}#{index}" style="margin-left:30px;") #{index}
   if currentUrl
     #panks
